updating VirtualThread code